--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>ju-arithmetic</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-M1</version>
 	</parent>
 
 	<artifactId>ju-arithmetic-prv</artifactId>
@@ -66,7 +64,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<addExtensions>false</addExtensions>
-							<classpathPrefix></classpathPrefix>
+							<classpathPrefix />
 							<classpathLayoutType>custom</classpathLayoutType>
 							<customClasspathLayout>${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
 						</manifest>
