--- a/examples/ex0/ex0-req/pom.xml
+++ b/examples/ex0/ex0-req/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
     <artifactId>ex0</artifactId>
     <groupId>org.sorcersoft.sorcer</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-M1</version>
   </parent>
 
 	<artifactId>ex0-req</artifactId>
