--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>sorcer</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-M1</version>
     </parent>
     <artifactId>distribution</artifactId>
     <name>SORCER distribution</name>
@@ -343,6 +343,13 @@
 
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>ssh-repository</id>
+            <url>scp://frs.sourceforge.net:/home/frs/project/sorcer/</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <staging.dir>${project.build.directory}/staging</staging.dir>
