--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<v.rio>5.0-M2</v.rio>
 		<v.groovy>2.1.3</v.groovy>
 		<v.sigar>1.6.4</v.sigar>
-		<v.lockmgr>0.2.sorcer2</v.lockmgr>
+		<v.lockmgr>0.2.sorcer2-SNAPSHOT</v.lockmgr>
 
         <!-- required for site -->
         <v_sorcer>${project.version}</v_sorcer>
@@ -363,6 +363,8 @@
                             <target>
                                 <echo message="Replacing version in versions.properties and SorcerConstants.java from: ${project.version} to: ${v.sorcer_release}" />
                                 <replace file="${project.basedir}/configs/versions.properties" token="v.sorcer=${project.version}" value="v.sorcer=${v.sorcer_release}" />
+                                <replace file="${project.basedir}/distribution/pom.xml" token="${project.version}" value="${v.sorcer_release}" />
+                                <replace file="${project.basedir}/tools/provider-root/pom.xml" token="${project.version}" value="${v.sorcer_release}" />
                                 <replace file="${project.basedir}/sos/sos-env/src/main/java/sorcer/core/SorcerConstants.java" token="SORCER_VERSION = &quot;${project.version}&quot;;" value="SORCER_VERSION = &quot;${v.sorcer_release}&quot;;" />
                             </target>
                         </configuration>
@@ -536,8 +538,8 @@
 		<developerConnection>scm:git:git@github.com:sorcersoft/sorcer.git</developerConnection>
 		<connection>scm:git:git://github.com/sorcersoft/sorcer.git</connection>
 		<url>https://github.com/sorcersoft/sorcer</url>
-	  <tag>sorcer-1.0-M1</tag>
-  </scm>
+	    <tag>sorcer-1.0-M1</tag>
+    </scm>
 
 	<profiles>
 		<profile>
