Fixed classpath in nsh, Rio updated to 5.0-M3, fixed lineending for *.ntl

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,7 +10,7 @@
 # Config and Sorcer files
 #########################
 *.xml eol=crlf
-*.ntl eol=crlf
+*.ntl eol=lf
 *.config eol=lf
 
 # Binary files
