--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -27,20 +27,12 @@
 ## codebase mvn://groupId:Artifact:[version]@host:port - specifies a jar file on a remote maven repository
 ## codebase http:// - specifies remote jar file using a direct URL
 
-
+    # tools.jar for ant tasks
+    # load file://${tools.jar}
     # load required libraries
-
-    load mvn://org.sorcersoft.sorcer:sos-shell
-    load mvn://org.sorcersoft.sorcer:sos-platform
-    load mvn://org.sorcersoft.sorcer:sos-util
-    load mvn://org.codehaus.groovy:groovy-all
-    load mvn://net.jini.lookup:serviceui
-    load mvn://org.rioproject:rio-platform
     # codebase mvn://org.sorcersoft.sorcer:ex2-api@192.168.0.10:50001
 
     # load user specific libraries
-    load !{user.home}/.nsh/lib/*.jar
+    load file://!{user.home}/.nsh/lib/*.jar
     
-    # tools.jar for ant tasks
-    # load ${tools.jar}
 
