--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -237,6 +237,11 @@
         </dependency>
         <dependency>
             <groupId>org.rioproject</groupId>
+            <artifactId>rio-logging-support</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
             <artifactId>rio-start</artifactId>
             <version>${v.rio}</version>
             <exclusions>
@@ -270,7 +275,11 @@
             <artifactId>cglib-nodep</artifactId>
             <version>2.1_3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
