--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>sorcer</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>1.0-M1</version>
+        <version>1.0-M2-SNAPSHOT</version>
     </parent>
     <artifactId>distribution</artifactId>
     <name>SORCER distribution</name>
