--- a/examples/ex1/ex1-prv/pom.xml
+++ b/examples/ex1/ex1-prv/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex1</artifactId>
-        <version>1.0-M1</version>
+        <version>1.0-M2-SNAPSHOT</version>
     </parent>
 
     <artifactId>ex1-prv</artifactId>
