--- a/examples/ex3/ex3-req/pom.xml
+++ b/examples/ex3/ex3-req/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex3</artifactId>
-        <version>1.0-M1</version>
+        <version>1.0-M2-SNAPSHOT</version>
     </parent>
 
     <artifactId>ex3-req</artifactId>
