--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>sorcer</artifactId>
-		<version>1.0-M1</version>
+		<version>1.0-M2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>examples</artifactId>
