--- a/sos-providers/dsp/dsp-prv/pom.xml
+++ b/sos-providers/dsp/dsp-prv/pom.xml
@@ -4,7 +4,7 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>1.0-M1</version>
+		<version>1.0-M2-SNAPSHOT</version>
 		<artifactId>dsp</artifactId>
 	</parent>
 
