--- a/sos-providers/exerter/pom.xml
+++ b/sos-providers/exerter/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>sos-providers</artifactId>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>1.0-M1</version>
+		<version>1.0-M2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>exerter</artifactId>
