--- a/sos-providers/spacer/pom.xml
+++ b/sos-providers/spacer/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>sos-providers</artifactId>
-		<version>1.0-M1</version>
+		<version>1.0-M2-SNAPSHOT</version>
     </parent>
 
     <artifactId>spacer</artifactId>
