--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>sos</artifactId>
-		<version>1.0-M1</version>
+		<version>1.0-M2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sos-platform</artifactId>
