--- a/tools/sorcer-launcher/pom.xml
+++ b/tools/sorcer-launcher/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>tools</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>1.0-M1</version>
+        <version>1.0-M2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
