--- a/tools/sorcer-provider/pom.xml
+++ b/tools/sorcer-provider/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>tools</artifactId>
-        <version>1.0-M1</version>
+        <version>1.0-M2-SNAPSHOT</version>
     </parent>
 
     <artifactId>sorcer-provider</artifactId>
-	<version>1.0-M1</version>
+	<version>1.0-M2-SNAPSHOT</version>
 	<packaging>maven-archetype</packaging>
 
     <name>SORCER tools :: sorcer provider archetype</name>
