--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -9,7 +9,7 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
-            <version>${project.version}</version>
+            <version>${v.sorcer}</version>
 		</dependency>
 	</dependencies>
 </project>
