--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/pom.xml
@@ -17,12 +17,12 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
-            <version>${project.version}</version>
+            <version>${v.sorcer}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>commons-prv</artifactId>
-			<version>${project.version}</version>
+			<version>${v.sorcer}</version>
 		</dependency>
 
 		<!-- CodeBase -->
