--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
-            <version>${project.version}</version>
+            <version>${v.sorcer}</version>
 		</dependency>
         <dependency>
             <groupId>net.jini.lookup</groupId>
