--- a/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>provider-root</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-M1</version>
         <relativePath></relativePath>
 	</parent>
 
@@ -18,7 +18,7 @@
 	<description>${serviceDescription}</description>
 
 	<properties>
-		<v.sorcer>1.0-SNAPSHOT</v.sorcer>
+		<v.sorcer>1.0-M1</v.sorcer>
 	</properties>
 
 	<modules>
@@ -34,7 +34,7 @@
 			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sorcer-api</artifactId>
-				<version>${project.version}</version>
+				<version>${v.sorcer}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
