--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 
 	<properties>
 		<v.sorcer>${project.version}</v.sorcer>
-		<v.sorcer_release>1.0-M2-SNAPSHOT</v.sorcer_release>
+        <!-- required for site -->
+        <v_sorcer>${project.version}</v_sorcer>
+        <v_sos_release>1.0-M1</v_sos_release>
 		<v.jini>2.2.1</v.jini>
 		<v.blitz>2.1.7</v.blitz>
 		<v.sleepycat>4.1.21</v.sleepycat>
@@ -25,10 +27,6 @@
 		<v.groovy>2.1.3</v.groovy>
 		<v.sigar>1.6.4</v.sigar>
 		<v.lockmgr>0.2.sorcer2-SNAPSHOT</v.lockmgr>
-
-        <!-- required for site -->
-        <v_sorcer>${project.version}</v_sorcer>
-        <v_sorcer_release>${v.sorcer_release}</v_sorcer_release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -362,11 +360,11 @@
                         <id>default-cli</id>
                         <configuration>
                             <target>
-                                <echo message="Replacing version in versions.properties and SorcerConstants.java from: ${project.version} to: ${v.sorcer_release}" />
-                                <replace file="${project.basedir}/configs/versions.properties" token="v.sorcer=${project.version}" value="v.sorcer=${v.sorcer_release}" />
-                                <replace file="${project.basedir}/distribution/pom.xml" token="${project.version}" value="${v.sorcer_release}" />
-                                <replace file="${project.basedir}/tools/provider-root/pom.xml" token="${project.version}" value="${v.sorcer_release}" />
-                                <replace file="${project.basedir}/sos/sos-env/src/main/java/sorcer/core/SorcerConstants.java" token="SORCER_VERSION = &quot;${project.version}&quot;;" value="SORCER_VERSION = &quot;${v.sorcer_release}&quot;;" />
+                                <echo message="Replacing version in versions.properties and SorcerConstants.java from: ${project.version} to: ${v_sos_release}" />
+                                <replace file="${project.basedir}/configs/versions.properties" token="v.sorcer=${project.version}" value="v.sorcer=${v_sos_release}" />
+                                <replace file="${project.basedir}/distribution/pom.xml" token="${project.version}" value="${v_sos_release}" />
+                                <replace file="${project.basedir}/tools/provider-root/pom.xml" token="${project.version}" value="${v_sos_release}" />
+                                <replace file="${project.basedir}/sos/sos-env/src/main/java/sorcer/core/SorcerConstants.java" token="SORCER_VERSION = &quot;${project.version}&quot;;" value="SORCER_VERSION = &quot;${v_sos_release}&quot;;" />
                             </target>
                         </configuration>
                         <goals>
