Rio integration - rio services start and are viewed in browser

--- a/configs/rio/logging/rio-logging.properties
+++ b/configs/rio/logging/rio-logging.properties
@@ -13,7 +13,7 @@ handlers=org.rioproject.logging.jul.FileHandler, java.util.logging.ConsoleHandle
 
 # Default global logging level.
 # Loggers and Handlers may override this level
-.level=INFO
+.level=DEBUG
 
 #===========================================================
 # Handler specific properties.
