--- a/configs/browser/pom.xml
+++ b/configs/browser/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>tools</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-M2-SNAPSHOT</version>
 	</parent>
 
     <artifactId>browser</artifactId>
