Rio-integration - partial success, Jobber starts

--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -22,7 +22,7 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import org.dancres.blitz.serviceui.DashboardUI;
 
-import sorcer.util.Sorcer;
+import sorcer.core.SorcerEnv;
 import sorcer.core.SorcerConstants;
 import sorcer.provider.boot.Booter;
 
@@ -49,11 +49,11 @@ org.dancres.blitz {
 
     // Published on the proxy as a Name attribute
     // name = "Blitz Space";
-    name = Sorcer.getActualSpaceName();
+    name = SorcerEnv.getActualSpaceName();
 	// The initial lookup groups to register with - after first boot
     // this information is held in a meta database and should be configured
     // via JoinAdmin
-    initialGroups = Sorcer.getLookupGroups();
+    initialGroups = SorcerEnv.getLookupGroups();
     //initialGroups = String[] { "sorcer.DEV" };
     
     // loginContext =
