--- a/configs/sorcer-boot-no-http.config
+++ b/configs/sorcer-boot-no-http.config
@@ -145,6 +145,6 @@ com.sun.jini.start {
        		/* SORCER network exert manager */
             SorcerDescriptorUtil.getExerter(
                 policy,
-                home + "${/}configs${/}sos-providers${/}exerter-prv.config")
+                home + "${/}configs${/}sos-providers${/}exerter.config")
     };
 }
