--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<v.rio>5.0-M3</v.rio>
 		<v.groovy>2.1.3</v.groovy>
 		<v.sigar>1.6.4</v.sigar>
-		<v.lockmgr>0.2.sorcer2-SNAPSHOT</v.lockmgr>
+		<v.lockmgr>0.2.sorcer2</v.lockmgr>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
