fix circular dependency eo.operator<->SdbUtil

--- a/tools/sos-shell/pom.xml
+++ b/tools/sos-shell/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-util</artifactId>
+            <artifactId>sos-env</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
