move sorcer.eo.operator to own module, fix dependencies

--- a/sos/pom.xml
+++ b/sos/pom.xml
@@ -20,5 +20,6 @@
         <module>sos-exertlet-sui</module>
         <module>commons-req</module>
         <module>commons-prv</module>
-     </modules>
+        <module>sorcer-api</module>
+    </modules>
 </project>
