--- a/examples/ex0/ex0-req/pom.xml
+++ b/examples/ex0/ex0-req/pom.xml
@@ -18,8 +18,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sos-platform</artifactId>
-            <version>${project.version}</version>
+			<artifactId>sorcer-api</artifactId>
 		</dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
