--- a/examples/ex5/ex5-prv/pom.xml
+++ b/examples/ex5/ex5-prv/pom.xml
@@ -19,6 +19,10 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
