--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
+				<artifactId>sorcer-api</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sos-platform</artifactId>
 				<version>${project.version}</version>
 			</dependency>
