--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -14,6 +14,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
 			<scope>provided</scope>
 		</dependency>
