--- a/tools/sos-shell/pom.xml
+++ b/tools/sos-shell/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
+            <artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
