--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -30,7 +30,7 @@ org.dancres.blitz {
 	home = System.getProperty(SorcerConstants.S_BLITZ_HOME, "${sorcer.home}/databases");
     initialAttrs = new Entry[]
             {org.dancres.blitz.serviceui.DashboardUI.getUIDescriptor(),
-            new Comment("Host: " + Sorcer.getHostName())};
+            new Comment("Host: " + SorcerEnv.getHostName())};
             
     // Default Stats to make available
     stats = new Switch[] {new OpSwitch(OpSwitch.ALL_TYPES,
