[pom] remove dependency from sos-platform to sleepycat move parts of dbp to module dbp-prv

--- a/tests/int-tests/pom.xml
+++ b/tests/int-tests/pom.xml
@@ -58,6 +58,11 @@
 			<version>${v.sleepycat}</version>
 		</dependency>
 		<dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>dbp-prv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
