--- a/sos-providers/dbp/pom.xml
+++ b/sos-providers/dbp/pom.xml
@@ -11,6 +11,7 @@
     <name>SORCER OS :: providers :: dbp</name>
     <packaging>pom</packaging>
     <modules>
-	<module>dbp-prv</module>	
+        <module>dbp-prv</module>
+        <module>dbp-api</module>
     </modules>
 </project>
