[pom] reenable integration tests

--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -106,11 +106,10 @@
 										<entry>com.sleepycat:je:${v.sleepycat}</entry>
 									</requestorClasspath>
 									<requestors>
-<!--
 										<param>
 											<mainClass>junit.sorcer.core.provider.ArithmeticNetTest</mainClass>
 											<codebase>
-												&lt;!&ndash;<param>${project.groupId}:${project.artifactId}:${project.version}</param>&ndash;&gt;
+												<!--<param>${project.groupId}:${project.artifactId}:${project.version}</param>-->
 												<param>org.sorcersoft.sorcer:sos-platform:${project.version}</param>
 												<param>org.sorcersoft.sorcer:ju-arithmetic-api:${project.version}</param>
 											</codebase>
@@ -118,7 +117,6 @@
 										<param>
 											<mainClass>junit.sorcer.core.provider.ProviderAccessorTest</mainClass>
 										</param>
--->
 										<requestor>
 											<mainClass>junit.sorcer.util.bdb.objects.SosUrlsTest</mainClass>
 										</requestor>
