--- a/sos/sos-env/pom.xml
+++ b/sos/sos-env/pom.xml
@@ -40,6 +40,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-platform</artifactId>
+        </dependency>
+        <dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
