--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
-				<artifactId>sorcer-api</artifactId>
+				<artifactId>sos-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
