--- a/examples/ex5/ex5-prv/pom.xml
+++ b/examples/ex5/ex5-prv/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
+            <artifactId>sos-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
