--- a/examples/first/first-prv/pom.xml
+++ b/examples/first/first-prv/pom.xml
@@ -17,7 +17,7 @@
 	<dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
+            <artifactId>sos-api</artifactId>
         </dependency>
 		<dependency>
 			<groupId>com.example.sorcer</groupId>
