--- a/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
@@ -33,7 +33,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
-				<artifactId>sorcer-api</artifactId>
+				<artifactId>sos-api</artifactId>
 				<version>${v.sorcer}</version>
 			</dependency>
 		</dependencies>
