--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/pom.xml
@@ -32,7 +32,7 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
-				<artifactId>sorcer-api</artifactId>
+				<artifactId>sos-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 		</dependencies>
