--- a/sos-providers/dbp/dbp-api/pom.xml
+++ b/sos-providers/dbp/dbp-api/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dbp-api</groupId>
+    <parent>
+        <groupId>org.sorcersoft.sorcer</groupId>
+        <artifactId>dbp</artifactId>
+        <version>1.0-M2-SNAPSHOT</version>
+    </parent>
+
     <artifactId>dbp-api</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     
 </project>
