--- a/sos-providers/dbp/dbp-prv/pom.xml
+++ b/sos-providers/dbp/dbp-prv/pom.xml
@@ -1,31 +1,38 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.sorcersoft.sorcer</groupId>
-		<artifactId>dbp</artifactId>
-		<version>1.0-M2-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>org.sorcersoft.sorcer</groupId>
+        <artifactId>dbp</artifactId>
+        <version>1.0-M2-SNAPSHOT</version>
+    </parent>
 
-	<artifactId>dbp-prv</artifactId>
-	<name>SORCER OS :: providers :: dbp :: prv</name>
+    <artifactId>dbp-prv</artifactId>
+    <name>SORCER OS :: providers :: dbp :: prv</name>
 
-	<dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>dbp-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-        	<version>${project.version}</version>
-        </dependency>        <dependency>
-		    <groupId>com.sleepycat</groupId>
-		    <artifactId>je</artifactId>
-		    <version>${v.sleepycat}</version>
-		</dependency>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
+            <groupId>com.sleepycat</groupId>
+            <artifactId>je</artifactId>
+            <version>${v.sleepycat}</version>
+        </dependency>
+        <dependency>
+        <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
-        </dependency>		
+        </dependency>
     </dependencies>
 
 </project>
