--- a/sos/sos-env/pom.xml
+++ b/sos/sos-env/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>jsk-platform</artifactId>
         </dependency>
         <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-lib</artifactId>
+            <version>${v.jini}</version>
+        </dependency>
+        <dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
