SorcerEnv refactored - fixed creating default config, problem with blitz

--- a/configs/blitz/configs/lockmgr.config
+++ b/configs/blitz/configs/lockmgr.config
@@ -6,6 +6,7 @@ import net.jini.lookup.entry.*;
 import sorcer.jini.lookup.entry.SorcerServiceInfo;
 
 import org.dancres.blitz.jini.lockmgr.JiniConfig;
+import sorcer.core.SorcerEnv;
 
 org.dancres.blitz.jini.lockmgr {
 	initialGroups = SorcerEnv.getLookupGroups();
