--- a/configs/blitz/configs/mahalo.config
+++ b/configs/blitz/configs/mahalo.config
@@ -3,6 +3,7 @@ import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 
 import sorcer.provider.boot.Booter;
+import sorcer.core.SorcerEnv;
 
 com.sun.jini.mahalo{
 
