--- a/configs/jini/configs/mahalo-boot.config
+++ b/configs/jini/configs/mahalo-boot.config
@@ -7,6 +7,7 @@ import net.jini.lookup.entry.*;
 import com.sun.jini.config.ConfigUtil;
 import java.util.Arrays;
 import sorcer.provider.boot.Booter;
+import sorcer.core.SorcerEnv;
 
 com.sun.jini.mahalo {
     name = SorcerEnv.getActualName("Transaction Manager");
