--- a/configs/jini/configs/reggie-boot.config
+++ b/configs/jini/configs/reggie-boot.config
@@ -7,6 +7,7 @@ import net.jini.lookup.entry.*;
 
 import java.util.Arrays;
 import sorcer.provider.boot.Booter;
+import sorcer.core.SorcerEnv;
 
 com.sun.jini.reggie {
     name = SorcerEnv.getActualName("Service Registry");
