--- a/configs/jini/configs/reggie.config
+++ b/configs/jini/configs/reggie.config
@@ -4,7 +4,7 @@ import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.provider.boot.Booter;
-
+import sorcer.core.SorcerEnv;
 
 com.sun.jini.reggie {
     name = SorcerEnv.getActualName("Service Registry");
