--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -24,7 +24,7 @@ import org.dancres.blitz.serviceui.DashboardUI;
 
 
 import sorcer.core.SorcerConstants;
-import sorcer.provider.boot.Booter;
+import sorcer.core.SorcerEnv;
 
 org.dancres.blitz {
 	home = System.getProperty(SorcerConstants.S_BLITZ_HOME, "${sorcer.home}/databases");
@@ -176,7 +176,7 @@ org.dancres.blitz {
 
     // The exporter to use - see the JINI documentation
     //
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0),
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0),
                          new ProxyTrustILFactory(null, null), false, true);
 
     // Blitz provides a suitable default for all these but this is how you'd
