--- a/configs/jini/configs/mahalo.config
+++ b/configs/jini/configs/mahalo.config
@@ -4,8 +4,7 @@ import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.provider.boot.Booter;
-
-import sorcer.provider.boot.Booter;
+import sorcer.core.SorcerEnv;
 
 com.sun.jini.mahalo {
     name = SorcerEnv.getActualName("Transaction Manager");
