add mising dependency on dbp-api

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -194,6 +194,7 @@ com.sun.jini.start {
             Booter.resolveClasspath(new String[]{
                 "org.sorcersoft.sorcer:commons-prv",
                 "org.sorcersoft.sorcer:dbp-prv",
+                "org.sorcersoft.sorcer:dbp-api",
                 "com.sleepycat:je",
             }),
             "sorcer.core.provider.dbp.DatabaseProvider",
