Rafactored netlet parsing and exerting in shell

--- a/examples/ex6/ex6-api/pom.xml
+++ b/examples/ex6/ex6-api/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
+            <artifactId>sos-env</artifactId>
         	<version>${project.version}</version>
         </dependency>
     </dependencies>
