--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -32,6 +32,10 @@
     # load required libraries
     # codebase mvn://org.sorcersoft.sorcer:ex2-api@192.168.0.10:50001
 
+    # Needed to interpret netlet scripts
+    load mvn://org.sorcersoft.sorcer:sos-api
+    load mvn://org.sorcersoft.sorcer:dbp-api
+
     # load user specific libraries
     load file://!{user.home}/.nsh/lib/*.jar
     
