--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 		<module>tools</module>
 		<module>tests</module>
 		<module>examples</module>
+        <module>sos-netlet</module>
     </modules>
 
     <licenses>
