--- a/sos-providers/logger/logger-prv/pom.xml
+++ b/sos-providers/logger/logger-prv/pom.xml
@@ -1,29 +1,31 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.sorcersoft.sorcer</groupId>
-		<artifactId>logger</artifactId>
-		<version>1.0-M2-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>org.sorcersoft.sorcer</groupId>
+        <artifactId>logger</artifactId>
+        <version>1.0-M2-SNAPSHOT</version>
+    </parent>
 
-	<artifactId>logger-prv</artifactId>
-	<packaging>jar</packaging>
-	<name>SORCER OS :: providers :: logger :: prv</name>
-	<description>SORCER</description>
-	<url>http://sorcersoft.org/</url>
+    <artifactId>logger-prv</artifactId>
+    <packaging>jar</packaging>
+    <name>SORCER OS :: providers :: logger :: prv</name>
+    <description>SORCER</description>
+    <url>http://sorcersoft.org/</url>
 
-	<dependencies>
+    <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-        	<version>${project.version}</version>
-        </dependency>        <dependency>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>logger-sui</artifactId>
             <version>${project.version}</version>
-        </dependency>       
+        </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
