--- a/tools/sorcer-maven-plugin/pom.xml
+++ b/tools/sorcer-maven-plugin/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>sorcer-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 
-	<name>SORCER tools :: Maven plugin</name>
+	<name>SORCER tools :: maven plugin</name>
 
 	<url>http://sorcersoft.org</url>
 
