--- a/tools/sos-netlet/pom.xml
+++ b/tools/sos-netlet/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>sos</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
+        <artifactId>tools</artifactId>
         <version>1.0-M2-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sos-netlet</artifactId>
     <name>SORCER tools :: netlet</name>
@@ -26,6 +26,11 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${v.slf4j}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
