--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<v.groovy>2.1.3</v.groovy>
 		<v.sigar>1.6.4</v.sigar>
 		<v.lockmgr>0.2.sorcer2</v.lockmgr>
+        <v.slf4j>1.7.5</v.slf4j>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -152,7 +153,7 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.7.5</version>
+				<version>${v.slf4j}</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
