--- a/sos/sos-util/pom.xml
+++ b/sos/sos-util/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.5</version>
+            <version>${v.slf4j}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
