--- a/tools/browser/pom.xml
+++ b/tools/browser/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.5</version>
+			<version>${v.slf4j}</version>
 		</dependency>
 	</dependencies>
 
