Added ex6-api to test scope of sos-netlet

--- a/tools/sos-netlet/pom.xml
+++ b/tools/sos-netlet/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ex6-api</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
