--- a/tools/sos-netlet/pom.xml
+++ b/tools/sos-netlet/pom.xml
@@ -36,6 +36,7 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>ex6-api</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
