--- a/tools/sorcer-maven-plugin/src/main/resources/META-INF/sorcer-maven-plugin/sorcer.env
+++ b/tools/sorcer-maven-plugin/src/main/resources/META-INF/sorcer-maven-plugin/sorcer.env
@@ -14,7 +14,7 @@ sorcer.provider.name.suffix = DEV
 
 # Groups to register/lookup
 provider.groups=---SET-BY-THE-PLUGIN---
-provider.space.group=sorcer.TEST-DEV
+provider.space.group=---SET-BY-THE-PLUGIN---
 provider.space.name=Blitz Space
 #provider.worker.transactional=true
 worker.transactional.lease.time=50000
@@ -24,6 +24,8 @@ lookup.cache.enabled=false
 # comma separated URLs
 #provider.lookup.locators=jini://localhost
 #   multicast and unicast discovery
+#provider.lookup.accessor=sorcer.util.ServiceAccessor
+#	some as above, but with Cataloger
 provider.lookup.accessor=sorcer.util.ProviderAccessor
 #   unicast or mixed discovery
 #provider.lookup.accessor=sorcer.util.ProviderLocator
