--- a/tools/browser/pom.xml
+++ b/tools/browser/pom.xml
@@ -22,6 +22,11 @@
          </dependency>
          <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-env</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-webster</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -56,6 +61,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>${v.slf4j}</version>
+            <scope>test</scope>
 		</dependency>
 	</dependencies>
 
