move UI factory from RemoteLoggerManager to its config

--- a/configs/sos-providers/logger.config
+++ b/configs/sos-providers/logger.config
@@ -22,7 +22,10 @@ sorcer.core.provider.ServiceProvider {
 	location = "Sorcersoft.com Lab";
 	publishedInterfaces = new Class[] { sorcer.core.provider.logger.RemoteLogger.class };
 	// add service UI
-	entries = new Entry[] { new Location("", "", "Sorcersoft.com") };
+	entries = new Entry[] {
+		sorcer.core.provider.logger.ui.LoggerUIFactory.getMainUIDescriptor(),
+		new Location("", "", "Sorcersoft.com")
+	};
 
 	// if not declared the default exporter is BasicJeriExporter
     	//exporter = new JrmpExporter(0);
