move UI factory from ServiceCataloger to its config

--- a/configs/sos-providers/cataloger.config
+++ b/configs/sos-providers/cataloger.config
@@ -11,8 +11,10 @@ sorcer.core.provider.ServiceProvider  {
 		name = "Cataloger";
 		publishedInterfaces = new Class[] { sorcer.core.Cataloger.class };
 		description = "Dynamic catalog of SORCER service providers";
-		location = "Sorcersoft.com Lab";		spaceEnabled = false;
-		entries = new Entry[] { 
+		location = "Sorcersoft.com Lab";
+		spaceEnabled = false;
+		entries = new Entry[] {
+			sorcer.core.provider.cataloger.ui.CatalogerUIFactory.getMainUIDescriptor(),
 			new Comment("Welcome to exertion-oriented programming!"), 
 			new Location("", "", "Sorcersoft.com") };
 
