--- a/sos-providers/cataloger/pom.xml
+++ b/sos-providers/cataloger/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>cataloger-api</module>
         <module>cataloger-prv</module>
+        <module>cataloger-sui</module>
     </modules>
 
 
