update sorcer version in first and archetype

--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/config/services.config
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/config/services.config
@@ -18,13 +18,13 @@ com.sun.jini.start {
 
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
-				"com.example.sorcer:first-api:1.0-SNAPSHOT",
+				"com.example.sorcer:first-api:1.0-M2-SNAPSHOT",
 				"org.sorcersoft.sorcer:sos-platform"
 			}),
 			policy,
 			Booter.resolveClasspath(new String[]{
-				"com.example.sorcer:first-api:1.0-SNAPSHOT",
-				"com.example.sorcer:first-prv:1.0-SNAPSHOT"
+				"com.example.sorcer:first-api:1.0-M2-SNAPSHOT",
+				"com.example.sorcer:first-prv:1.0-M2-SNAPSHOT"
 			}),
 			"sorcer.core.provider.ServiceTasker",
 			new String[] { "classpath:/config/HelloWorld.config" }
