--- a/tools/sorcer-provider/src/test/resources/projects/first/archetype.properties
+++ b/tools/sorcer-provider/src/test/resources/projects/first/archetype.properties
@@ -1,7 +1,7 @@
 #Wed Mar 20 10:23:05 CET 2013
 #package i groupId powinny się różnić żeby przetestować poprawność zastosowanych zmiennych
 package=com.sorcersoft.first
-version=1.0-SNAPSHOT
+version=1.0-M2-SNAPSHOT
 groupId=com.example.sorcer
 artifactId=first
 providerInterface=HelloWorld
