ju-arithmetic-prv: add dep to sos-env; add sui modules to classpath of cataloger nad logger; Accessor: add default filter; CatalogExertDispatcher: do not try to call remote jobber when called with non-NetJob

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -150,7 +150,8 @@ com.sun.jini.start {
             policy,
             Booter.resolveClasspath(new String[]{
                 "org.sorcersoft.sorcer:commons-prv",
-                "org.sorcersoft.sorcer:cataloger-prv"
+                "org.sorcersoft.sorcer:cataloger-prv",
+                "org.sorcersoft.sorcer:cataloger-sui"
             }),
             "sorcer.core.provider.cataloger.ServiceCataloger",
             new String[]{ home + "/configs/sos-providers/cataloger.config" }
