--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -22,6 +22,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>sos-env</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>ju-arithmetic-api</artifactId>
 			<version>${project.version}</version>
