ex6 fix missing import in config

--- a/examples/ex6/ex6-prv/src/main/resources/config/start-all-prvs.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-all-prvs.config
@@ -1,3 +1,4 @@
+import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.core.SorcerEnv;
