--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -28,7 +28,8 @@ com.sun.jini.start {
     endPort = Booter.getWebsterEndPort();
 
     standardProviderCodebase = Booter.resolveCodebase(new String[]{
-        "org.sorcersoft.sorcer:sos-platform",
+        "org.sorcersoft.sorcer:sos-env",
+        //"org.sorcersoft.sorcer:sos-platform",
         "org.sorcersoft.sorcer:sos-exertlet-sui",
         "net.jini.lookup:serviceui"
     });
