--- a/sos/pom.xml
+++ b/sos/pom.xml
@@ -21,5 +21,6 @@
         <module>commons-req</module>
         <module>commons-prv</module>
         <module>sos-api</module>
+        <module>sorcer-api</module>
     </modules>
 </project>
