move all classes considered to be part of the public API to sorcer-api, some related changes

--- a/examples/ex6/ex6-api/pom.xml
+++ b/examples/ex6/ex6-api/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-env</artifactId>
+            <artifactId>sorcer-api</artifactId>
         	<version>${project.version}</version>
         </dependency>
     </dependencies>
