--- a/sos-providers/logger/logger-sui/pom.xml
+++ b/sos-providers/logger/logger-sui/pom.xml
@@ -19,6 +19,7 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         	<version>${project.version}</version>
-        </dependency>    </dependencies>
+        </dependency>
+    </dependencies>
 
 </project>
