--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -29,6 +29,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>sorcer-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-util</artifactId>
 			<version>${project.version}</version>
