Archetype dependencies fixed, bugfixes after tests, distribution still not working - problem with internal webster, ex0

--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -8,7 +8,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sos-platform</artifactId>
+			<artifactId>sorcer-api</artifactId>
             <version>${v.sorcer}</version>
 		</dependency>
 	</dependencies>
