--- a/examples/ex0/pom.xml
+++ b/examples/ex0/pom.xml
@@ -29,7 +29,7 @@
 			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sos-api</artifactId>
-				<version>${project.version}</version>
+				<version>${v.sorcer}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
