Added support for dynmic loading of codebase to exertlet-sui, fixed codebase to allow running scripts from exertlet-sui

--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -25,7 +25,9 @@
 ## urls to external websters are supported in the following format:
 ##
 ## codebase mvn://groupId:Artifact:[version]@host:port - specifies a jar file on a remote maven repository
+##          You can omit the @host:port only if your environment points to a running webster URL
 ## codebase http:// - specifies remote jar file using a direct URL
+##
 
     # tools.jar for ant tasks
     # load file://${tools.jar}
