--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -29,7 +29,9 @@ com.sun.jini.start {
 
     standardProviderCodebase = Booter.resolveCodebase(new String[]{
         "org.sorcersoft.sorcer:sos-env",
-        //"org.sorcersoft.sorcer:sos-platform",
+        "org.sorcersoft.sorcer:sos-api",
+        "org.sorcersoft.sorcer:sos-netlet",
+        "org.codehaus.groovy:groovy-all",
         "org.sorcersoft.sorcer:sos-exertlet-sui",
         "net.jini.lookup:serviceui"
     });
