--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -23,7 +23,7 @@
         <module>sorcer-launcher</module>
 		<module>sorcer-maven-plugin</module>
 		<module>sorcer-provider</module>
-	<!--	<module>provider-root</module>-->
+		<module>provider-root</module>
 		<!-- force download implicit dependencies -->
 		<module>dependencies</module>
 	</modules>
